# cicd-template

./: .coverage  .flake8  .gitignore  LICENSE  Pipfile  README.md  app.py  bandit.yaml  environment.yml  main.py  pyproject.toml  requirements-ci.txt  requirements.txt
.github/: pull_request_template.md
.github/actions/checkout_repo_restore_env/: action.yaml
.github/actions/common_scripts/: check_membership.sh
.github/actions/detect_python/: action.yaml
.github/actions/detect_python/scripts/: detect_version.sh
.github/actions/install_dependencies/: action.yaml
.github/actions/install_dependencies/scripts/: install_ci_dependencies.sh  install_pipenv_dependencies.sh  install_uv_dependencies.sh  install_venv_dependencies.sh
.github/actions/lint/: action.yaml
.github/actions/lint/scripts/: generate_pylint_badge.sh  lint_with_flake8.sh  lint_with_pylint.sh
.github/actions/restore_env_from_cache/: action.yaml
.github/actions/scan/: action.yaml
.github/actions/scan/scripts/: bandit_scan.sh
.github/actions/test/: action.yaml
.github/actions/test/scripts/: run_tests.sh
.github/workflows/: CI (Pipenv).yaml  CI (uv).yaml  CI (venv).yaml  CI Template.yaml  CI.yaml  codeql.yml
src/: api.py  frontend.py
src/backend/: Dockerfile  api.py  requirements.txt
src/frontend/: Dockerfile  requirements.txt
tests/: test_api.py
