[project]
name = "cicd-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pybadges>=3.0.1",
    "streamlit>=1.48.1",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
cicd = [
    "bandit>=1.8.6",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "mypy>=1.17.1",
    "pylint>=3.3.8",
    "pytest>=8.4.1",
]
